--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Surbhi Kumari</h1>
+            <div><a href="mailto:your.email@example.com">singhsurbhi400@gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/<handle>">https://github.com/surbhi400</a></li>
+                    <li><a href="https://linkedin.com/in/<handle>">https://www.linkedin.com/in/surbhi-kumari-670211224/</a></li>
+                    <li><a href="https://twitter.com/<handle>">https://twitter.com/singhsurbhi400</a></li>
                 </ul>    
             </section>
             
